# mlops

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
irises_classification/configs/: config.yaml
irises_classification/dataset/: train.csv.dvc  val.csv.dvc
irises_classification/project/: infer.py  train.py
